osd: build_past_intervals_parallel: Ignore new partially created PGs

Fixes: http://tracker.ceph.com/issues/21833

Signed-off-by: David Zafman <dzafman@redhat.com>